--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+-f https://download.pytorch.org/whl/torch_stable.html
 aiohttp==3.8.1
 aiosignal==1.2.0
 async-timeout==4.0.2
@@ -41,8 +42,8 @@ requests==2.27.1
 scipy==1.7.3
 six==1.16.0
 soupsieve==2.3.1
-torch==1.10.1
-torchvision==0.11.2
+torch==1.10.1+cpu
+torchvision==0.11.2+cpu
 typing_extensions==4.0.1
 urllib3==1.26.8
 Werkzeug==2.0.2
