--- a/requirements.txt
+++ b/requirements.txt
@@ -1,145 +1,52 @@
-absl-py==0.14.1
-argon2-cffi==21.1.0
-astunparse==1.6.3
-attrs==21.2.0
-backcall==0.2.0
-bleach==4.1.0
-blis==0.7.4
-boto3==1.18.48
-botocore==1.21.48
-cached-property==1.5.2
-cachetools==4.2.4
-catalogue==2.0.6
-certifi==2021.5.30
-cffi==1.15.0
-charset-normalizer==2.0.6
-clang==5.0
-click==8.0.1
+-f https://download.pytorch.org/whl/torch_stable.html
+aiohttp==3.8.1
+aiosignal==1.2.0
+async-timeout==4.0.2
+attrs==21.4.0
+beautifulsoup4==4.10.0
+certifi==2021.10.8
+charset-normalizer==2.0.10
+click==8.0.3
 colorama==0.4.4
-contextvars==2.4
-cycler==0.10.0
-cymem==2.0.5
-dataclasses==0.8
-decorator==5.1.0
-defusedxml==0.7.1
-entrypoints==0.3
+cycler==0.11.0
+et-xmlfile==1.1.0
 fastai==1.0.61
-fastbook==0.0.18
-fastcore==1.3.27
-fastdownload==0.0.5
 fastprogress==1.0.0
-fastrelease==0.1.12
-Flask==2.0.1
-Flask-SQLAlchemy==2.5.1
-flatbuffers==1.12
+Flask==2.0.2
+fonttools==4.28.5
+frozenlist==1.3.0
 future==0.18.2
-gast==0.4.0
 geographiclib==1.52
 geopy==2.2.0
-ghapi==0.1.19
-google-auth==2.3.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-greenlet==1.1.2
-grpcio==1.41.0
 gunicorn==20.1.0
-h5py==3.1.0
-idna==3.2
-imageio==2.9.0
-immutables==0.16
-importlib-metadata==4.8.1
-ipykernel==5.5.6
-ipython==7.16.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
+idna==3.3
 itsdangerous==2.0.1
-jedi==0.18.0
-Jinja2==3.0.1
-jmespath==0.10.0
-joblib==1.1.0
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.12
-jupyter-console==6.4.0
-jupyter-core==4.9.1
-jupyterlab-widgets==1.0.2
-kiwisolver==1.3.1
-line-bot-sdk==1.20.0
-Markdown==3.3.4
+Jinja2==3.0.3
+kiwisolver==1.3.2
+line-bot-sdk==2.0.1
 MarkupSafe==2.0.1
-matplotlib==3.3.4
-mistune==0.8.4
-murmurhash==1.0.5
-nbconvert==5.6.1
-nbdev==1.1.23
-nbformat==5.1.3
-notebook==6.4.5
-numpy==1.19.5
-oauthlib==3.1.1
-opencv-contrib-python==4.5.3.56
-opt-einsum==3.3.0
-packaging==21.0
-pandas==1.1.5
-pandocfilters==1.5.0
-parso==0.8.2
-pathy==0.6.0
-pickleshare==0.7.5
-Pillow==8.3.2
-preshed==3.0.5
-prometheus-client==0.12.0
-prompt-toolkit==3.0.22
-protobuf==3.18.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-pydantic==1.8.2
-Pygments==2.10.0
+matplotlib==3.5.1
+multidict==5.2.0
+numexpr==2.8.1
+numpy==1.22.1
+nvidia-ml-py3==7.352.0
+openpyxl==3.0.9
+packaging==21.3
+pandas==1.3.5
+Pillow==9.0.0
 pyngrok==5.1.0
-pyparsing==2.4.7
-pyrsistent==0.18.0
+pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2021.3
-pywin32==302
-pywinpty==1.1.5
-PyYAML==5.4.1
-pyzmq==22.3.0
-qtconsole==5.2.0
-QtPy==1.11.2
-requests==2.26.0
-requests-oauthlib==1.3.0
-rsa==4.7.2
-s3transfer==0.5.0
-scikit-learn==0.24.2
-scipy==1.5.4
-Send2Trash==1.8.0
-sentencepiece==0.1.96
-six==1.15.0
-smart-open==5.2.1
-spacy==3.1.3
-spacy-legacy==3.0.8
-SQLAlchemy==1.4.25
-srsly==2.4.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow-estimator==2.6.0
-termcolor==1.1.0
-terminado==0.12.1
-testpath==0.5.0
-thinc==8.0.10
-threadpoolctl==3.0.0
-torch==1.9.1
-torchvision==0.10.1
-tornado==6.1
-tqdm==4.62.3
-traitlets==4.3.3
-typer==0.4.0
-typing-extensions==3.7.4.3
-urllib3==1.26.7
-wasabi==0.8.2
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.0.1
-widgetsnbextension==3.5.2
-wrapt==1.12.1
+PyYAML==6.0
+requests==2.27.1
+scipy==1.7.3
+six==1.16.0
+soupsieve==2.3.1
+torch==1.10.1+cpu
+torchvision==0.11.2+cpu
+typing_extensions==4.0.1
+urllib3==1.26.8
+Werkzeug==2.0.2
 xlrd==1.2.0
-zipp==3.5.0
+yarl==1.7.2
