--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ openpyxl==3.0.9
 packaging==21.3
 pandas==1.3.5
 Pillow==9.0.0
+psycopg2==2.9.3
 pyngrok==5.1.0
 pyparsing==3.0.7
 python-dateutil==2.8.2
@@ -43,6 +44,7 @@ requests==2.27.1
 scipy==1.7.3
 six==1.16.0
 soupsieve==2.3.1
+SQLAlchemy==1.3.23
 torch==1.10.1+cpu
 torchvision==0.11.2+cpu
 typing_extensions==4.0.1
