--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ et-xmlfile==1.1.0
 fastai==1.0.61
 fastprogress==1.0.0
 Flask==2.0.2
+Flask-SQLAlchemy==2.4.4
 fonttools==4.28.5
 frozenlist==1.3.0
 future==0.18.2
