--- a/requirements.txt
+++ b/requirements.txt
@@ -2,54 +2,49 @@
 aiohttp==3.8.1
 aiosignal==1.2.0
 async-timeout==4.0.2
+asynctest==0.13.0
 attrs==21.4.0
-beautifulsoup4==4.10.0
 certifi==2021.10.8
-charset-normalizer==2.0.10
-click==8.0.3
+charset-normalizer==2.0.12
+click==8.0.4
 colorama==0.4.4
 cycler==0.11.0
-et-xmlfile==1.1.0
+dataclasses==0.8
 fastai==1.0.61
-fastprogress==1.0.0
-Flask==2.0.2
-Flask-SQLAlchemy==2.4.4
-fonttools==4.28.5
-frozenlist==1.3.0
+fastprogress==1.0.2
+Flask==2.0.3
+Flask-SQLAlchemy==2.5.1
+frozenlist==1.2.0
 future==0.18.2
 geographiclib==1.52
 geopy==2.2.0
-gunicorn==20.1.0
+greenlet==1.1.2
 idna==3.3
+idna-ssl==1.1.0
+importlib-metadata==4.8.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
-kiwisolver==1.3.2
-line-bot-sdk==2.0.1
+kiwisolver==1.3.1
+line-bot-sdk==2.1.0
 MarkupSafe==2.0.1
-matplotlib==3.5.1
+matplotlib==3.3.4
 multidict==5.2.0
-numexpr==2.8.1
-numpy==1.22.1
-nvidia-ml-py3==7.352.0
-openpyxl==3.0.9
-packaging==21.3
-pandas==1.3.5
-Pillow==9.0.0
-psycopg2==2.9.3
-pyngrok==5.1.0
+numpy==1.19.5
+pandas==1.1.5
+Pillow==8.4.0
 pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2021.3
 PyYAML==6.0
 requests==2.27.1
-scipy==1.7.3
+scipy==1.5.4
 six==1.16.0
-soupsieve==2.3.1
-SQLAlchemy==1.3.23
-torch==1.10.1+cpu
-torchvision==0.11.2+cpu
-typing_extensions==4.0.1
+SQLAlchemy==1.4.31
+torch==1.10.2
+torchvision==0.11.3
+typing_extensions==4.1.1
 urllib3==1.26.8
-Werkzeug==2.0.2
+Werkzeug==2.0.3
 xlrd==1.2.0
 yarl==1.7.2
+zipp==3.6.0
