--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ fastai==1.0.61
 Flask==2.0.3
 Flask-SQLAlchemy==2.5.1
 geopy==2.2.0
+gunicorn==20.1.0
 line-bot-sdk==2.1.0
 matplotlib==3.3.4
 numpy==1.19.5
@@ -10,4 +11,6 @@ pandas==1.1.5
 Pillow==8.4.0
 PyYAML==6.0
 SQLAlchemy==1.4.31
+torch==1.10.1+cpu
+torchvision==0.11.2+cpu
 xlrd==1.2.0
