--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 -f https://download.pytorch.org/whl/torch_stable.html
 fastai==1.0.61
 Flask==2.0.3
+Flask-SQLAlchemy==2.5.1
 geopy==2.2.0
 gunicorn==20.1.0
 line-bot-sdk==2.1.0
+SQLAlchemy==1.4.31
 torch==1.10.1+cpu
 torchvision==0.11.2+cpu
 openpyxl==3.0.9
